--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-"homepage": "https://khadeshrikant33/swansthya-hostpital-project",
-
+"homepage": "https://khadeshrikant33.github.io/swansthya-hostpital-project",
   "name": "swasthyahospital",
   "version": "0.1.0",
   "private": true,
